@@ -3,6 +3,8 @@
 <component type="desktop">
   <id>ltris</id>
   <name>ltris</name>
+  <developer_name>Michael Speck</developer_name>
+  <project_license>GPL-2.0</project_license>
   <metadata_license>CC0-1.0</metadata_license>
   <summary>Game of skill with falling blocks</summary>
   <description>
@@ -11,7 +13,7 @@
           the rectangular playing field and can be moved sideways or rotated by
           90 degree units with the aim of building lines without gaps which
           then disappear (causing any block above the deleted line to fall
-          down).  can watch your CPU playing while enjoying a cup of tea!  
+          down).
       </p>
       <p>
           LTris has three game modes: In Classic you play until the stack of
@@ -20,7 +22,7 @@
           level and later on tiles and lines suddenly appear. In Multiplayer up
           to three players (either human or CPU) compete with each other
           sending removed lines to all opponents. And in Demo you can watch
-          your CPU playing while enjoying a cup of tea!  
+          your CPU playing while enjoying a cup of tea!
       </p>
   </description>
   <launchable type="desktop-id">ltris.desktop</launchable>
@@ -38,7 +40,25 @@
   </screenshots>
   <update_contact>ltris maintainer - kulkanie@gmx.net</update_contact>
   <content_rating type="oars-1.1"/>
-    <releases>
-       <release version="1.2.1" date="2020-07-28"/>
+  <releases>
+    <release version="1.3" date="2024-03-03"/>
+    <release version="1.2.8" date="2024-02-18"/>
+    <release version="1.2.7" date="2023-09-05"/>
+    <release version="1.2.6" date="2022-10-03"/>
+    <release version="1.2.5" date="2022-06-17"/>
+    <release version="1.2.4" date="2022-04-14"/>
+    <release version="1.2.3" date="2021-04-10"/>
+    <release version="1.2.2" date="2020-12-29"/>
+    <release version="1.2.1" date="2020-07-28"/>
+    <release version="1.2" date="2020-06-28"/>
+    <release version="1.0.20" date="2020-06-06"/>
+    <release version="1.0.19" date="2013-10-29"/>
+    <release version="1.0.18" date="2011-10-30"/>
+    <release version="1.0.17" date="2011-08-25"/>
+    <release version="1.0.16" date="2011-03-03"/>
+    <release version="1.0.15" date="2010-09-20"/>
+    <release version="1.0.14" date="2009-12-25"/>
+    <release version="1.0.13" date="2009-10-25"/>
   </releases>
+  <launchable type="desktop-id">ltris.desktop</launchable>
 </component>
