@@ -1,3 +1,5 @@
+- updated LTris appstream metadata (2024/04/20 Matthias Mailänder)
+
 1.3:
 - cpu algorithm uses hold option (2024/02/29 MS)
 - tweaked cpu algorithm (2024/02/27 MS)
